nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    api: wordpress
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: frontend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort:
