ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
  - secretName: wordpress-secret
  backend:
    serviceName: wordpress
    servicePort: 80
