ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-layer7
spec:
  rules:
  - host: azymberdi.com
    http:
      paths:
      - path: /  
        backend:
          serviceName: wordpress
          servicePort: 80
